updating plot colors

--- a/mnist.ipynb
+++ b/mnist.ipynb
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "235cbb10-696b-4ba6-9186-fe3065392de6",
+   "execution_count": null,
+   "id": "b7a31d83-b616-4aaf-a2b8-1d5d12f4aaa3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,8 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "5a455453-0a54-4fb4-b231-91c52bfe864b",
+   "execution_count": null,
+   "id": "6e17c7dc-6b4c-49c5-99f2-7254ef98eaa5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,8 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "de97c065-0b0f-4ef8-b0bb-a6e62c303849",
+   "execution_count": null,
+   "id": "c322b428-baa2-4fb6-aad9-f44ca4e53eac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,20 +72,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "428af74e-3110-4a85-8dc2-90c5d00ab3ed",
+   "execution_count": null,
+   "id": "d10497cd-aff9-4b50-8696-621d83554c46",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x_train shape: (60000, 784, 1)\n",
-      "60000 train samples\n",
-      "10000 test samples\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x_train = x_train.reshape(x_train.shape[0], -1, 1)\n",
     "x_test = x_test.reshape(x_test.shape[0], -1, 1)\n",
@@ -109,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e9a60b6-6741-4d06-9109-0289b7353f40",
+   "id": "9c051198-bcd9-4c23-b6e7-c7cd6fdb6b46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "478152df-72cf-49f0-ab49-ec9aec1abb1f",
+   "id": "5359396b-2d2f-4994-87ee-122fa962a4ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,8 +139,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "a755c067-5845-41c3-be4a-cf86a0ace93f",
+   "execution_count": null,
+   "id": "e249b7d2-e832-4736-abe7-40e6015dbeae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc52a685-9411-4153-9f1b-052a18b9541c",
+   "id": "2c1ddd33-ef54-4ebe-bfd3-485a04d26034",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df54f7b2-97a7-4be5-ade7-8b59d699242e",
+   "id": "9560aeab-a742-44e9-9f62-a9816b282751",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "773bd15e-c3ce-48bb-878c-93c269f7a025",
+   "id": "11d1cf0d-c0cb-4764-bc02-5b0c2bfc1914",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +219,7 @@
     "axes = axes.reshape(-1)\n",
     "for i in range(len(axes)):\n",
     "    a = axes[i]\n",
-    "    a.imshow((weights[0][0:784, i:i+1]).reshape(28, 28), cmap=plt.cm.seismic)\n",
+    "    a.imshow((weights[0][0:784, i:i+1]).reshape(28, 28), cmap=plt.cm.cividis)\n",
     "    a.set_title(i)\n",
     "    a.set_xticks(())\n",
     "    a.set_yticks(())\n",
@@ -253,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
